# worldguess

./: .env.example  ARCHITECTURE.md  Makefile  README.md  compose.base.yaml  compose.coolify.yaml  compose.yaml
.github/: dependabot.yaml
.github/workflows/: backend.yaml  deploy.yaml  docker-backend.yml  docker-build-push.yml  docker-frontend.yml  docker-pipelines.yml  frontend.yaml  pipelines.yaml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  generate_openapi_spec.py  mypy.ini  openapi.json  pyproject.toml
backend/src/: api.py  settings.py
backend/src/orm/: tables.py
backend/src/routes/: __init__.py  checks.py
backend/tests/: test_guess_qualification.py
backend/worldguess/: api.py  constants.py  database.py  dependencies.py  schemas.py  settings.py
backend/worldguess/models/: population.py
backend/worldguess/orm/: tables.py
backend/worldguess/queries/: population.py  population_raster.py
backend/worldguess/routes/: __init__.py  app.py  challenge.py  checks.py  game.py  tiles.py
backend/worldguess/utils/: guess_qualification.py
docker-entrypoint-initdb.d/: 01-init-postgis.sql
e2e/: test_challenge_flow.py
frontend/: .prettierrc  Dockerfile  generate_api_client.sh  package-lock.json  package.json
frontend/.husky/: pre-commit
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css
frontend/src/api/: ApiClient.ts  client.ts  index.ts
frontend/src/api/core/: ApiError.ts  BaseHttpRequest.ts  FetchHttpRequest.ts  OpenAPI.ts  request.ts
frontend/src/api/models/: ChallengeDetails.ts  CreateChallengeRequest.ts  CreateChallengeResponse.ts  DifficultyLevel.ts  EndChallengeResponse.ts  GameConfig.ts  GuessQualification.ts  HTTPValidationError.ts  PopulationResult.ts  RandomGameResponse.ts  SizeClass.ts  Status.ts  SubmitGuessRequest.ts  SubmitGuessResponse.ts
frontend/src/api/services/: AppService.ts  ChallengeService.ts  ChecksService.ts  GameService.ts
frontend/src/components/: DesignModeUI.tsx  GameUI.tsx  LayerSwitcher.tsx  Main.tsx  MapContainer.tsx  MenuScreen.tsx  NotFoundPage.tsx  Toast.tsx  UsernameDialog.tsx
frontend/src/constants/: map.ts
frontend/src/hooks/: useChallengeMode.ts  useGameFromURL.ts  useGameState.ts  useMapControls.ts  usePopulationSlider.ts  useURLSync.ts
frontend/src/types/: game.ts
frontend/src/utils/: geometry.ts  population.ts
pipelines/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  main.py  mypy.ini  pyproject.toml  start.sh
pipelines/flows/: base.py  data_version_check.py  load_land_areas.py  load_population.py  load_population_raster.py  set_data_version.py  set_status.py
