[tool.poetry]
name = "worldguess"
version = "0.1.0"
description = ""
authors = ["Matheus Fillipe <matheusfillipeag@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
pydantic-geojson = "^0.2.0"
geoalchemy2 = "^0.17.1"
pymemcache = "^4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
in-place = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
